[project]
name = "uvbp"
version = "0.1.0"
description = "boilerplate"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
]

[tool.ruff.lint]
select = [
    "E4", "E7", "E9",# pycodestyle
    "F",# pyflakes
    "B",# flake8-bugbear
    "I",# isort
    "UP",# pyupgrade
    "SIM",# flake8-simplify
    "RUF",# ruff-specific
    "ANN",# flake8-annotations (type hint enforcement)
    "TCH",# flake8-type-checking
    "RET",# flake8-return
    "PTH",# flake8-use-pathlib
]
ignore = [
    "E501",# line length
]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_subclassing_any = false
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = ["textual.*"] # if any
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
